
Slick 8.x-1.0-dev, 2017-03-15
-----------------------------
- #2770005 by Shreya Shetty, gausarts, Nitesh Pawar: Replaces deprecated methods
  with new and specified return value when condition not matched in switch.
- #2855190 by daniel.bosen: Using bower or composer to download the slick
  library is cumbersome.

Slick 8.x-1.0-dev, 2017-03-11
-----------------------------
- Fixed for typo in comments.
- Added supports for programmatic options defined within skin definitions to
  allow addition of options with other libraries integrated with Slick without
  modifying Optionset like Zoom, Reflection, Slicebox, etc.

Slick 8.x-1.0-dev, 2017-02-11
-----------------------------
- Fixed for Slick libraries weight regression at hook_library_info_alter().
- Fixed for hidden form element.
- Cleaned up debris from old approach.
- Added dependencies to skins.

Slick 8.x-1.0-dev, 2017-02-10
-----------------------------
- Fixed for regression with Overridables option not being respected.

Slick 8.x-1.0-dev, 2017-01-24
-----------------------------
- #2843870 by ruslan_03492: Requirements could not be resolved to an installable
  set of packages drupal/blazy 8.*.
- Arranged the form item weights for better visibility.

Slick 8.x-1.0-dev, 2017-01-16
-----------------------------
- Moved slick_library_info_build() content into SlickManager to declutter
  module file.
- Removed unused params from slick.load.js.
- Removed deprecated SafeMarkup::format() for Html::escape().

Slick 8.x-1.0-dev, 2016-12-27
-----------------------------
- Marked it Beta6.

Slick 8.x-1.0-dev, 2016-12-24
-----------------------------
- Simplified slick.load.js to reduce dup variables.
- Moved slick related media player from Blazy into Slick.

Slick 8.x-1.0-dev, 2016-12-20
-----------------------------
- #2837939 by gausarts, toncic: Missing schema error for edgeFriction option,
  creating new slick optionset. Resaving optionset and clearing cache fix it.

Slick 8.x-1.0-dev, 2016-12-18