@@ -8,6 +8,7 @@ use Drupal\Core\Entity\EntityStorageInterface;
 use Drupal\Core\Entity\EntityTypeInterface;
 use Drupal\Core\Config\Entity\DraggableListBuilder;
 use Drupal\Component\Utility\Html;
+use Drupal\blazy\BlazyGrid;
 use Drupal\slick\SlickManagerInterface;
 use Symfony\Component\DependencyInjection\ContainerInterface;
 
@@ -124,9 +125,53 @@ class SlickListBuilder extends DraggableListBuilder {
    *   Renderable array.
    */
   public function render() {
-    $build['description'] = array(
+    $manager = $this->manager;
+
+    $build['description'] = [
       '#markup' => $this->t("<p>Manage the Slick optionsets. Optionsets are Config Entities.</p><p>By default, when this module is enabled, a single optionset is created from configuration. Install Slick example module to speed up by cloning them. Use the Operations column to edit, clone and delete optionsets.<br /><strong>Important!</strong> Avoid overriding Default optionset as it is meant for Default -- checking and cleaning. Use Duplicate instead. Otherwise messes are yours.<br />Slick doesn't need Slick UI to run. It is always safe to uninstall Slick UI once done with optionsets.</p>"),
-    );
+    ];
+
+    $availaible_skins = [];
+    $skins = $manager->getSkins()['skins'];
+
+    foreach ($skins as $key => $skin) {
+      $name = isset($skin['name']) ? $skin['name'] : $key;
+      $group = isset($skin['group']) ? Html::escape($skin['group']) : 'None';
+      $provider = isset($skin['provider']) ? Html::escape($skin['provider']) : 'Lory';
+      $description = isset($skin['description']) ? Html::escape($skin['description']) : $this->t('No description');
+
+      $markup = '<h3>' . $this->t('@skin <br><small>Id: @id | Group: @group | Provider: @provider</small>', [
+        '@skin' => $name,
+        '@id' => $key,
+        '@group' => $group,
+        '@provider' => $provider,
+      ]) . '</h3>';
+
+      $markup .= '<p><em>&mdash; ' . $description . '</em></p>';
+
+      $availaible_skins[$key] = [
+        '#markup' => '<div class="messages messages--status">' . $markup . '</div>',
+      ];
+    }
+
+    ksort($availaible_skins);
+    $availaible_skins = ['default' => $availaible_skins['default']] + $availaible_skins;
+
+    $settings = [];
+    $settings['grid'] = 3;
+    $settings['grid_medium'] = 2;
+    $settings['blazy'] = FALSE;
+    $settings['style'] = 'column';
+
+    $header = '<br><hr><h2>' . $this->t('Available skins') . '</h2>';
+    $header .= '<p>' . $this->t('Some skin works best with a specific Optionset, and vice versa. Use matching names if found. Else happy adventure!') . '</p>';
+    $build['skins_header']['#markup'] = $header;
+    $build['skins_header']['#weight'] = 20;
+
+    $build['skins'] = BlazyGrid::build($availaible_skins, $settings);
+    $build['skins']['#weight'] = 21;
+    $build['skins']['#attached'] = $manager->attach($settings);
+    $build['skins']['#attached']['library'][] = 'blazy/admin';
 
     $build[] = parent::render();
     return $build;
